client/css/styles.css
body{
	text-align:center;
	height: auto;
	background-color: #336699;
 }

 li{
 	/*overflow:hidden;*/
 	white-space: wrap;
 	text-overflow:wrap;
 }

 .centerField{
 	padding-right: 10px;
 	padding-left: 10px;
 }

 .inline-p{
 	display: inline;
 	color: white;
 	text-shadow: none;
 }

 .ui-content{
 	background-color: #336699;
 	border: none !important;
 }

 .ui-header{
 	border: none !important;
 }

 #datepicker-center{
 	background-color: white;
 	display: inline-block;
 }

#headerLogin, #headerHome, #headerCal, #headerView, #headerHistory, #headerBook, #headerConfirm{
	background-color:#333;
	color:white;
	text-shadow:
	-1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000;  
}

.ui-btn-left, .ui-btn-right { 
	color: white !important; 
	background: white !important; 
	background-color: #336699 !important;  
	text-shadow: none !important; 
	border: none !important;
}



.select, .viewAppts, .selectADay, .viewFiestas{
	color: white;
	text-shadow: none;
}

.cancelButton{
	float: right;
	position: relative;
}

.ui-footer{
	display: none;
}

.ui-page{
	background-color: #336699;
}

